--- a/web/index.html
+++ b/web/index.html
@@ -50,6 +50,7 @@ canvas {
     </select>
 
     <button id="updateChart">Update Chart</button>
+    <button id="closeBrowser">Dismiss</button>
 </div>
 </div>
 <script src="script.js"></script>
