--- a/analytics/analytics.html
+++ b/analytics/analytics.html
@@ -136,6 +136,13 @@
         .toggle-btn.active .indicator {
             background: #fff;
         }
+
+        .checkbox-label {
+            display: flex;
+            align-items: center;
+            gap: 6px;
+            font-size: 12px;
+        }
         
         .stats-grid {
             display: grid;
@@ -402,6 +409,13 @@
                     <label>Max Qty</label>
                     <input type="number" id="maxQty" placeholder="100" step="1">
                 </div>
+                <div class="filter-group">
+                    <label>Daily Avg</label>
+                    <label class="checkbox-label">
+                        <input type="checkbox" id="excludeEmptyDays">
+                        Exclude days with no sales
+                    </label>
+                </div>
             </div>
         </div>
         
@@ -530,6 +544,7 @@
                 max_price: document.getElementById('maxPrice').value || undefined,
                 min_qty: document.getElementById('minQty').value || undefined,
                 max_qty: document.getElementById('maxQty').value || undefined,
+                exclude_empty_days: document.getElementById('excludeEmptyDays').checked ? 'true' : undefined,
                 guess_keystone: guessKeystone ? 'true' : undefined,
             };
         }
@@ -1170,6 +1185,7 @@
             document.getElementById('maxPrice').value = '';
             document.getElementById('minQty').value = '';
             document.getElementById('maxQty').value = '';
+            document.getElementById('excludeEmptyDays').checked = false;
             guessKeystone = false;
             document.getElementById('keystoneToggle').classList.remove('active');
             applyFilters();
